# Stack

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  file.stck  parse.c  parse.h  stack.c  stack.h  stacky.c
include/: common.h  parse.h  stack.h
include/common/: list.h  string.h
samples/: decreasing_loop.stck  increasing_loop.stck  loop.stck  modulo.stck
source/: common.c  parse.c  stack.c  stacky.c
source/common/: list.c  string.c
